Remove Jabber functionality update. Refs #106546